<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarThumbVertical="@color/orange_red"
    android:scrollbarSize="2dp"
    android:scrollbars="vertical"
    android:background="@color/gray">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView8"
            android:layout_width="50dp"
            android:layout_height="10dp"
            android:layout_marginTop="10dp"
            android:padding="13dp"
            app:cardBackgroundColor="@color/light_gray"
            app:cardCornerRadius="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/message_status"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/blue"
            app:layout_constraintBottom_toBottomOf="@+id/title"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="10dp"
            app:layout_constraintTop_toTopOf="@+id/title"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/info_animation"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/dismiss"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:layout_marginHorizontal="40dp"
            android:backgroundTint="@color/darker_blue"
            android:text="@string/dismiss"
            android:textColor="@color/ultra_white"
            app:cornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/message_text" />

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:paddingVertical="10dp"
            android:text="@string/message_title"
            android:textColor="@color/orange_red"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialCardView8" />

        <TextView
            android:id="@+id/message_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="20dp"
            android:paddingBottom="10dp"
            android:gravity="center"
            android:text="@string/empty_text"
            android:textColor="@color/ultra_white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>