<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarThumbVertical="@color/orange_red"
    android:scrollbarSize="2dp"
    android:scrollbars="vertical"
    android:background="@color/gray">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView8"
            android:layout_width="50dp"
            android:layout_height="10dp"
            android:layout_marginTop="10dp"
            android:padding="13dp"
            app:cardBackgroundColor="@color/light_gray"
            app:cardCornerRadius="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:backgroundTint="@color/darker_blue"
            android:src="@drawable/arrow_right_icon"
            app:borderWidth="0dp"
            app:fabSize="mini"
            app:layout_constraintBottom_toBottomOf="@+id/title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/title"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:paddingVertical="10dp"
            android:text="@string/settings_title"
            android:textStyle="bold"
            android:textColor="@color/orange_red"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialCardView8" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/user_name_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:hint="@string/user_name_hint"
            android:textColorHint="@color/ultra_white"
            app:boxStrokeColor="@color/darker_blue"
            app:boxStrokeWidth="1dp"
            app:boxStrokeErrorColor="@color/red"
            app:errorIconTint="@color/red"
            app:hintTextColor="@color/ultra_white"
            app:endIconMode="clear_text"
            app:endIconTint="@color/red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/insert_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColor="@color/ultra_white"
                android:imeOptions="actionGo" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ip_address_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:hint="@string/ip_address_hint"
            android:textColorHint="@color/ultra_white"
            app:boxStrokeColor="@color/darker_blue"
            app:boxStrokeErrorColor="@color/red"
            app:boxStrokeWidth="1dp"
            app:endIconMode="clear_text"
            app:endIconTint="@color/red"
            app:errorIconTint="@color/red"
            app:hintTextColor="@color/ultra_white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_name_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/insert_ip_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789."
                android:inputType="numberDecimal"
                android:textColor="@color/ultra_white" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/photos_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:paddingBottom="10dp"
            android:gravity="center"
            android:text="@string/photos_message"
            android:textColor="@color/ultra_white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ip_address_layout" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/owner_photos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/photos_message" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>